# CDQ

./: .gitignore  .gitmodules  CMakeLists.txt  CQtDeployer.pro
Deploy/: Deploy.pro  dependenciesscanner.cpp  deploycore.cpp
UnitTests/: CMakeLists.txt  UnitTests.pro  testutils.cpp  tst_deploytest.cpp
src/: CMakeLists.txt
src/CQtDeployer/: CMakeLists.txt
src/Deploy/: CMakeLists.txt  deploycore.cpp  elf_type.h
tests/: CMakeLists.txt  main.pro
