#
# Copyright (C) 2018-2021 QuasarApp.
# Distributed under the lgplv3 software license, see the accompanying
# Everyone is permitted to copy and distribute verbatim copies
# of this license document, but changing it is not allowed.
#
# This is a stub for the cmake build system.

add_subdirectory(Deploy)
add_subdirectory(CQtDeployer)
